tests/codegen/fail/006-leq.hyg
assert( 3 <= 0);
assert(3.14f <= 1.0f)